@@ -279,6 +279,19 @@ static int redis_select(void *conn, Octstr *sql, List *binds, List **res)
             return 0;
             break;
 
+        case REDIS_REPLY_INTEGER:
+#if defined(REDIS_DEBUG)
+            debug("dbpool.redis",0,"Received REDIS_REPLY_INTEGER");
+#endif
+            *res = gwlist_create();
+            row = gwlist_create();
+            temp = octstr_format("%ld", reply->integer);
+            gwlist_append(row, temp);
+            gwlist_produce(*res, row);
+            freeReplyObject(reply);
+            return 0;
+            break;
+
         case REDIS_REPLY_ARRAY:
 #if defined(REDIS_DEBUG)
             debug("dbpool.redis",0,"Received REDIS_REPLY_ARRAY");
@@ -293,7 +306,7 @@ static int redis_select(void *conn, Octstr *sql, List *binds, List **res)
                 }
                 temp = octstr_create_from_data(reply->element[i]->str, reply->element[i]->len);
 #if defined(REDIS_DEBUG)
-                debug("dbpool.redis",0,"Received REDIS_REPLY_ARRAY[%d]: %s", i, octstr_get_cstr(temp));
+                debug("dbpool.redis",0,"Received REDIS_REPLY_ARRAY[%ld]: %s", i, octstr_get_cstr(temp));
 #endif
                 gwlist_append(row, temp);
             }
@@ -304,7 +317,7 @@ static int redis_select(void *conn, Octstr *sql, List *binds, List **res)
 
         default:
 #if defined(REDIS_DEBUG)
-            debug("dbpool.redis",0,"Received unknown Redis reply %d", reply->type);
+            error(0,"REDIS: Received unknown Redis reply type %d", reply->type);
 #endif
             break;
     }
