@@ -1,4 +1,14 @@
 2014-04-01  Stipe Tolj  <stolj at kannel.org>
+    * gwlib/dbpool_redis.c: add handling of REDIS_REPLY_INTEGER in function
+      redis_select().
+    * gw/dlr_redis.c: re-write the DLR messages counter retrieving. We can't
+      use an INCR/DECR counter approach, since TTL'ed expiration won't correct
+      these values and we end up in inaccurate counters. Rather use the DBSIZE
+      command on the specific database used by redis, this is unique then. This
+      is also more performative, since we don't need to update the counter 
+      every time we change a key.
+    
+2014-04-01  Stipe Tolj  <stolj at kannel.org>
     * gwlib/dbpool_redis.c: fix typo for REDIS_DEBUG macro. Add more possible
       debug output. NLC.
     * gw/dlr_redis.c: DLR-URLs need to be URL-[en|de]coded for redis and
